--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ attrs==19.3.0
 certifi==2019.11.28
 chardet==3.0.4
 colorama==0.4.3
+Faker==4.0.0
 get==2019.4.13
 idna==2.8
 more-itertools==8.1.0
@@ -14,10 +15,12 @@ py==1.8.1
 pyparsing==2.4.6
 pytest==5.3.2
 pytest-rerunfailures==8.0
+python-dateutil==2.8.1
 query-string==2019.4.13
 request==2019.4.13
 requests==2.22.0
 selenium==3.141.0
 six==1.13.0
+text-unidecode==1.3
 urllib3==1.25.7
 wcwidth==0.1.8
